fix(css): add nowrap to buttons

--- a/client/index.css
+++ b/client/index.css
@@ -47,6 +47,7 @@ a {
 	margin-left: .5em;
 	text-decoration: none;
 	transition: all .2s;
+	white-space: nowrap;
 }
 
 .download:hover, .clipboard:hover {
